# project-wwtg

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  middleware.py
backend/app/api/: analytics.py  auth.py  chat.py  plan.py  router.py
backend/app/core/: deps.py
backend/app/models/: db.py  schemas.py
backend/app/pipeline/: __init__.py  daily_runner.py
backend/app/services/: analytics.py  chat_service.py  data_service.py  llm_service.py  map_service.py  plan_service.py  weather_service.py
backend/app/services/crawler/: .cookies.json  __init__.py  config.py  cookie_manager.py  stealth.py  xhs_crawler.py
backend/logs/: analytics.jsonl
backend/scripts/: start.sh
backend/tests/: test_analytics.py  test_crawler.py  test_endpoints.py  test_health.py  test_llm_service.py  test_map_service.py  test_weather_service.py
docs/: PRD-weekend-agent-v1-full.md  PRD-weekend-agent-v1.1.md  PRD-weekend-agent-v1.md  azure-setup-guide.md  competitive-analysis.md  deep-analysis-report.md  pitch-deck.md  technical-design-v1.md  todo.md
miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json
miniprogram/components/plan-card/: plan-card.js  plan-card.wxml  plan-card.wxss
miniprogram/pages/index/: index.js  index.json  index.wxml  index.wxss
miniprogram/pages/plan-detail/: plan-detail.js  plan-detail.wxml  plan-detail.wxss
miniprogram/pages/profile/: profile.js  (+2 more)
miniprogram/utils/: api.js  util.js
tools/xiaohongshu-skill/: .gitignore  README.md  SKILL.md
(+11 files in other folders)
